--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,15 @@ before_install:
     - docker build -t makish/react-test -f ./client/Dockerfile.dev ./client
 
 script: 
-    - docker run -e CI=true USERNAME/react-test npm test
+    - docker run -e CI=true makish/react-test npm test
 
 after_success:
     - docker build -t makish/multi-client ./client
     - docker build -t makish/multi-nginx ./nginx
     - docker build -t makish/multi-server ./server
     - docker build -t makish/multi-worker ./worker
+    - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+    - docker push makish/multi-client
+    - docker push makish/multi-nginx
+    - docker push makish/multi-server
+    - docker push makish/multi-worker
